--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <div class="container">
-        <h2>Jogo da Memoria</h2>
+        <h2>Jogo da Memória</h2>
         <div class="game"></div>
         <button class="reset" onclick="window.location.reload()">RESET GAME</button>
     </div>
